[package]
name = "candle-selective-scan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]    
crate-type = ["lib", "staticlib"]

[dependencies]
candle = { version = "0.3.3", package="candle-core" }
half = "2.3.1"

[build-dependencies]
bindgen_cuda = { version = "0.1.4", optional = true }

[dev-dependencies]
memmap2 = "0.9.4"
safetensors = "0.4.2"

[features]
cuda = ["candle/cuda", "dep:bindgen_cuda"]
metal = ["candle/metal"]
